--- a/.github/workflows/run-analysis.yml
+++ b/.github/workflows/run-analysis.yml
@@ -1,42 +1,34 @@
-name: Run stock ranking script and deploy to GitHub Pages
+name: Run Stock Ranking
 
 on:
   schedule:
-    - cron: '0 * * * *'  # 매시간 정각 실행 (UTC 기준)
-  workflow_dispatch:
+    - cron: '*/3 * * * *'  # ⏰ 매 3분마다 실행
+  workflow_dispatch:       # 🔘 수동 실행도 허용
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
 
-    - name: Install dependencies
-      run: |
-        pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Run analysis
-      run: |
-        python ranking_score.py
+      - name: Run script
+        run: python main.py
 
-    - name: Deploy to gh-pages
-      run: |
-        git config user.name github-actions
-        git config user.email github-actions@github.com
-
-        git fetch
-        git switch gh-pages || git checkout --orphan gh-pages
-
-        rm -rf *.json
-        cp -r output/* .
-
-        git add *.json
-        git commit -m "Update stock ranking at $(date -u '+%Y-%m-%d %H:%M:%S') UTC" || echo "No changes"
-        git push origin gh-pages --force
+      - name: Upload output to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./output
+          publish_branch: gh-pages
